# terminal_for_data_scientists

./: 0 - Lesson Plan.md  01 - Introduction to the Terminal.md  02 - Basic Navigation.md  04 - Viewing and Editing Files.md  09 - Package Management with Homebrew.md  10 - Version Control with Git.md  11 - Python Environment Management.md  3 - File & Directory Operations.md  5 - File Permissions & Ownership.md  6 - Process Management.md  7 - Piping & Redirection.md  README.md  Special Lesson - Introduction to Poetry.md  Special Topic - Creating Command Line Interfaces.md  Special Topic - Introduction to Poetry.md  args_example.py  data.csv  data_backup.sh  data_processor.sh  myscript.sh  pyproject.toml  script.py
examples/docker/: Dockerfile  Makefile  docker-compose.yml
examples/python/: script2.py
examples/shell/: exercise_16_1.sh  exercise_16_2.sh  exercise_17_1.sh  exercise_17_2.sh  exercise_18_1.sh  exercise_18_2.sh  my_script_18.sh  myscript_16.sh
lessons/: 08 - Useful Commands for Data Scientists.md  10.5 - Advanced Git, Managing Large Codebases with Multiple Branches.md  12 - Running Python Scripts from Terminal  13 - Data Processing with Command Line.md  14 - Automating Tasks with Shell Scripts.md  15 - Advanced Topics.md  17 - Advanced Bash Scripting: Control Structures & Functions.md  18 - Bash Scripting: Error Handling and Debugging.md
special-topics/: 04.5 - Special Topic - Introduction to VIM.md  12.5 - Special Topic - Creating Command Line Interfaces.md  16 - Special Topics - Docker, Docker Compose, Makefiles.md
